...
        android:layout_marginBottom="50dp">
    </ListView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meal_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight=".2"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
...
