...
                    android:layout_height="wrap_content"
                    android:layout_marginRight="100dp"
                    android:text="Recipes: "
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/mealplan_r_add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="ADD" />

                <Button
                    android:id="@+id/mealplan_r_delete_button"
...
