...
            android:text="Sort by"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="6dp"
            android:layout_weight="0.4"/>

        <Spinner
            android:id="@+id/shopping_list_sort_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/sorting_shoppinglist"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1.2">
...
